Fix align-items auto error on react-native

--- a/scss/box-alignment.scss
+++ b/scss/box-alignment.scss
@@ -22,9 +22,6 @@
     justify-content: space-evenly;
   }
 
-  &-items-auto {
-    justify-items: auto;
-  }
   &-items-start {
     justify-items: start;
   }
